# ai-code-sandbox

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: CI.yml
ai_code_sandbox/: __init__.py  config.py  error.py  model.py  pool.py  requirements.py  sandbox.py
ai_code_sandbox/javascript/: sandbox.py
ai_code_sandbox/node/: requirements.py  sandbox.py
ai_code_sandbox/python/: requirements.py  sandbox.py
codegen_sandbox/: __init__.py  error.py  sandbox.py
codegen_sandbox/node/: requirements.py  sandbox.py
codegen_sandbox/python/: sandbox.py
examples/: classification.py
tests/: test_config.py  test_requirements.py  test_sandbox.py
tests/node/: test_sandbox_node.py
tests/python/: test_python_requirements.py  test_python_sandbox.py  test_sandbox_python.py
