[metadata]
name = codegen-sandbox
version = 0.1.0
author = Federico Minutoli
author_email = fede97.minutoli@gmail.com
description = secure Node.js and Python sandbox for LLM code execution using Docker.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DiTo97/codegen-sandbox
license = MIT
license_files =
    LICENSE


[options]
packages = find:
python_requires = >=3.7
install_requires =
    docker>7
    psutil>6

[options.packages.find]
exclude =
    examples*
    tests*
